[package]
name = "recfs"
version = "0.1.0"
edition = "2018"
authors = ["myl7 <myl@myl.moe>"]
license = "MIT"

[dependencies]
fuse_mt = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2"
uuid = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bimap = "0.6"
libc = "0.2"
time = "0.1"
