[package]
name = "recfs"
version = "0.1.0"
edition = "2018"
authors = ["myl7 <myl@myl.moe>"]
license = "MIT"

[dependencies]
fuse_mt = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
uuid = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bimap = "0.6"
libc = "0.2"
chrono = "0.4"
binary_macros = "1.0.0"
libaes = "0.6.4"
base64 = "0.20.0"
md5 = "0.7.0"
log = "0.4.17"
env_logger = "0.10.0"
rpassword = "7.2.0"
keyring = "1.2.0"
